Made some corrections in jupyter file

--- a/temperature head calculation.ipynb
+++ b/temperature head calculation.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Секция-220. \n",
+    "## Расчёт температуры поверхности аккумуляторных секций\n",
     "### Расчёт температурного напора $(Т_0—Т_{ст})$, °С\n",
     "Дано:\n",
     "- секция с внутренним диаметром 220 мм,\n",
@@ -109,47 +109,8 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Секция-220: \n",
-       "- мощность рассеяния = 15 Вт,\n",
-       "- коэффициент конвективного теплообмена = 1.565 Вт/(м²·°С),\n",
-       "- температурный напор = 12.1°С.\n",
-       "        "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bs220 = BatarySetion(length = 800e-3,\n",
-    "                     inner_diameter = 220e-3,\n",
-    "                     radial_wall_thickness = 18e-3,\n",
-    "                     axial_wall_thickness = 34e-3,\n",
-    "                     power_dissipation = 15,\n",
-    "                     convection_coefficient = convection_coefficient_calculated,\n",
-    "                     temperature_head = None,\n",
-    "                     ambient_temperature=300)\n",
-    "bs220"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Расчёт температуры поверхности аккумуляторных секций"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -211,7 +172,7 @@
        "1                    0.034  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,11 +193,13 @@
      "output_type": "stream",
      "text": [
       "Секция-154:\n",
-      "    температурный напор (Т0—Тст)=30.0 °С, \n",
-      "    коэффицинт теплоотдачи a=1.56 Вт/(м²·°С), \n",
+      "    - мощность рассеяния:     Pdis=15.0 °С, \n",
+      "    - температурный напор:    (Т0—Тст)=30.0 °С, \n",
+      "    - коэффицинт теплоотдачи: a=1.56 Вт/(м²·°С), \n",
       "Секция-220:\n",
-      "    температурный напор (Т0—Тст)=12.1 °С, \n",
-      "    коэффицинт теплоотдачи a=1.56 Вт/(м²·°С), \n"
+      "    - мощность рассеяния:     Pdis=15.0 °С, \n",
+      "    - температурный напор:    (Т0—Тст)=12.1 °С, \n",
+      "    - коэффицинт теплоотдачи: a=1.56 Вт/(м²·°С), \n"
      ]
     }
    ],
